apps/template-cluster/searxng/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng
  namespace: searxng
spec:
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      containers:
        - name: searxng
          volumeMounts:
          - name: searxng-config
            mountPath: /etc/searxng
          - name: searxng-cache
            mountPath: /var/cache/searxng
          - name: custom-settings
            mountPath: /etc/searxng-custom
            readOnly: true
      volumes:
      - name: searxng-config
        emptyDir: {}
      - name: searxng-cache
        emptyDir: {}
      - name: custom-settings
        configMap:
          name: searxng-cm
      nodeSelector:
        node-role.kubernetes.io/cpu-worker: "true"
